# skill-optimizer

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
config/: calibration.yaml  pricing.yaml
demo/skills/contract_clause_flagger/: SKILL.md
demo/skills/contract_redline_reviewer/: SKILL.md
demo/skills/invoice_validator/: SKILL.md
demo/skills/loan_calculator/: SKILL.md
demo/skills/policy_compliance_auditor/: SKILL.md
demo/skills/release_notes_compiler/: SKILL.md
demo/skills/report_drafter/: SKILL.md
demo/skills/ticket_router/: SKILL.md
docs/: APPROACH.md  ARCHITECTURE.md  DESIGN-DECISIONS.md  FINDINGS.md  LIMITATIONS.md  TRACE-MAPPING.md
scripts/: capture_traces.py  check.py  d012_helper_groundtruth.py  inspect_patched_turns.py  inspect_trace_sdk.py  probe_parallelism.py  show_run.py  smoke_test_d003_d006.py
src/skill_optimizer/: preflight.py  runtime.py  skill_md.py
src/skill_optimizer/adapters/: claude_cli_adapter.py  claude_cli_eval_adapter.py  jsonl_trace_store.py
src/skill_optimizer/cli/: main.py
src/skill_optimizer/config/: __init__.py  calibration.py  pricing.py
src/skill_optimizer/domain/: decision_policy.py  report.py  token_usage.py  trace.py  types.py  verifier.py
src/skill_optimizer/ports/: eval_harness.py  llm_client.py  trace_store.py
tests/unit/: test_calibration.py  test_runtime_frontmatter.py  test_skill_md_primary_fields.py
tests/unit/adapters/: test_jsonl_trace_store.py
tests/unit/domain/: test_cache_strategy_rewrite.py  test_composition.py  test_d001_estimate.py  test_d004_estimate.py  (+18 more)
(+391 files in other folders)
