[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-optimizer"
version = "0.0.1"
description = "Execution-log-driven skill optimization for Claude Code skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.72,<0.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
skopt = "skill_optimizer.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
